<resources>
    <string name="app_name">St Therese</string>
    <string name="file_name">St Therese</string>
    <string name="school_name">St Therese Convent School</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_licensed_Key">License Key</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">@string/google_maps_api_key</string>
    <string name="test_title">Test Text</string>
    <string name="test_description">Content Testing, which is also known can simply be defined as a practise of testing whether the written content is appropriate and suitable for the audience in question, and whether or not they are able to understand and comprehend it.</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_staff">MainActivityStaff</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="reference">Reference</string>
    <string name="replied">Replied</string>
    <string name="not_replied">Not Replied</string>
    <string name="dashboard">Home</string>
    <string name="inbox">Inbox</string>
    <string name="notification">Notification</string>
    <string name="live_scheduled">Live Scheduled List</string>
    <string name="live_class">Live Class</string>
    <string name="online_video">Online Video</string>
    <string name="logout">Logout</string>
    <string name="screen_size">Normal</string>
    <string name="studymaterial">Study Material</string>
    <string name="join_live">Join Live</string>
    <string name="nav_assignment">Homework List</string>
    <string name="nav_descriptive">Descriptive Exam</string>
    <string name="nav_objective">Objective Exam</string>
    <string name="nav_absent">Absent</string>
    <string name="nav_library">Library </string>
    <string name="nav_leave">Leave </string>
    <string name="nav_enquiry">Enquiry </string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_calender">Calender</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="edit_conveyor">Edit Conveyor</string>
    <string name="title">Title</string>
    <string name="video_title">Video Title</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="go_live">Go Live</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="create_message">Create Message</string>
    <string name="update_message">Update Message</string>
    <string name="create_notification">Create Notification</string>
    <string name="update_notification">Update Notification</string>
    <string name="create_video">Create Video</string>
    <string name="update_video">Update Video</string>
    <string name="create_exam">Create Exam</string>
    <string name="update_exam">Update Exam</string>
    <string name="create_chapter">Create Chapter</string>
    <string name="update_chapter">Update Chapter</string>
    <string name="create_studymaterial">Create Study Material</string>
    <string name="update_studymaterial">Update Study Material</string>
    <string name="create_assignment">Create Homework</string>
    <string name="update_assignment">Update Homework</string>
    <string name="video_link">Video Link</string>
    <string name="nav_track">Track </string>
    <string name="nav_fees">Fee Details</string>
    <string name="nav_progress">Progress Report Type 1</string>
    <string name="nav_progress_cbse">Progress Report Type 2</string>
    <string name="nav_progress_lpup">Progress Report LP/UP</string>
    <string name="nav_annual_report">Annual Report</string>
    <string name="nav_conveyor">Conveyor</string>
    <string name="nav_offline">Offline Video</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_results">No Result Founded</string>
    <string name="loading">Loading..</string>
    <string name="no_internet_str">Oops no internet</string>
    <string name="save_amp_exit"><![CDATA[Save & Exit]]></string>
    <string name="resume">Resume</string>
    <string name="finish">Finish</string>
    <string name="video_name">Videos Library</string>
    <string name="notifications_admin_channel_name">Notification Name</string>
    <string name="notifications_admin_channel_description">Notification Desc</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="msg_subscribed">Topic Created</string>
    <string name="msg_subscribe_failed">Topic Creation Failed</string>
    <string name="no_offline_video">No Offline Videos</string>
    <string name="quickmessage">Quick Message</string>
    <string name="quickregionalmsg">Regional Message</string>
    <string name="quickvoicesms">Voice Message</string>
    <string name="quicknotification">Notification Message</string>
    <string name="attendanecemaking">Take Attendance Single</string>
    <string name="nattendanecemaking">Quick Marking</string>
    <string name="leavenote">Leave Note</string>
    <string name="leavestaffnote">Manage Staff Leave</string>
    <string name="enquiry">Parent Enquiry</string>
    <string name="enquiry_tab">Enquiry</string>
    <string name="up_studymaterial">Upload Study Material</string>
    <string name="updateresult">Update Result</string>
    <string name="publishresult">Publish Result</string>
    <string name="manage_exam">Manage Exam Details</string>
    <string name="manage_question">Manage Question Details</string>
    <string name="markregister11">Mark Register Lp/Up</string>
    <string name="sendprogress11">Send Progress Report LP/UP</string>
    <string name="progress_report11">Progress Card LP/UP</string>
    <string name="progress_report11_new">New Progress Card LP/UP</string>
    <string name="markregister1">Mark Register(KG-IV)</string>
    <string name="markregister2">Mark Register(V-VIII)</string>
    <string name="markregister3">Mark Register(IX-XII)</string>
    <string name="markregisterce">Mark Register CE</string>
    <string name="markregistercbse">Mark Entry</string>
    <string name="mark_regind1">Mark.Reg Individual(KG-IV)</string>
    <string name="mark_regind2">Mark.Reg Individual(V-VIII)</string>
    <string name="mark_regind3">Mark.Reg Individual(IX-XII)</string>
    <string name="progress_card1">Progress Card LP/UP (KG-VIII)</string>
    <string name="progresscard2">Progress Card HS/HSS (IX-XII)</string>
    <string name="progresscard1_new">New Progress Card (KG-VIII)</string>
    <string name="progresscard2_new">New Progress Card (IX-XII)</string>
    <string name="progresscard3">Progress Card Type 1</string>
    <string name="progresscard3_new">Progress Card Type 2</string>
    <string name="progresscard4">Progress Card CE</string>
    <string name="progresscard4_new">New Progress Card CE</string>
    <string name="markregistercete">Mark Register Msp LP/UP</string>
    <string name="markregistercete2">Mark Register Msp HS</string>
    <string name="sendprogress_cete">Send Progress Report CE LP/UP</string>
    <string name="sendprogress_cete2">Send Progress Report CE HS</string>
    <string name="sendprogress">Send Progress Report</string>
    <string name="sendprogress_cbse">Send Progress Report</string>
    <string name="sendprogress_ce">Send Progress Report CE</string>
    <string name="exam_topper1">Exam Topper</string>
    <string name="exam_topper2">Exam Topper</string>
    <string name="exam_topper3">Exam Topper CE</string>
    <string name="exam_grade1">Exam Grade</string>
    <string name="exam_grade2">Exam Grade</string>
    <string name="exam_grade3">Exam Grade CE</string>
    <string name="exam_topper4">Exam Topper MSPS</string>
    <string name="exam_grade4">Exam Grade MSPS</string>
    <string name="progresscard5">Progress Card Msp LP/UP</string>
    <string name="progresscard6">Progress Card Msp HS</string>
    <string name="progresscard5_new">New Progress Card Msp LP/UP</string>
    <string name="progresscard6_new">New Progress Card Msp HS</string>
    <string name="gallery">Gallery</string>
    <string name="uploadimage">Upload Image</string>
    <string name="uploadvideo">Upload Video</string>
    <string name="managealbumname">Manage Album Name</string>
    <string name="studentremark">Student Remark</string>
    <string name="create_event">Create Event</string>
    <string name="event_list">Event List</string>
    <string name="group_list">Manage Group</string>
    <string name="add_studentto_group">Manage Student Group</string>
    <string name="del_studentgroup">Delete Student From Group</string>
    <string name="public_group_list">Public Member List</string>
    <string name="studentclaswise">Student Classwise</string>
    <string name="attendancesummery">Attendance Summery</string>
    <string name="absentlist">Absent List</string>
    <string name="academicmanagement">Academic Management</string>
    <string name="schoolcalender">School Calendar</string>
    <string name="trackvehicle">Track</string>
    <string name="staffsubtitution">Staff Substitution</string>
    <string name="nav_onlineexam">Online Exam</string>
    <string name="select_year">Select Academic</string>
    <string name="select_class">Select Class</string>
    <string name="select_subject">Select Subject</string>
    <string name="select_chapter">Select Chapter</string>
    <string name="select_album_category">Select Album Category</string>
    <string name="select_group">Select Group Type</string>
    <string name="select_album">Select Album Type</string>
    <string name="select_exam">Select Exam</string>
    <string name="select_exam_month">Select Exam Month</string>
    <string name="select_status">Status</string>
    <string name="details">Details</string>
    <string name="unattended">UnAttended</string>
    <string name="submission">Submitted Student</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="duration">Duration(Minutes)</string>
    <string name="allowed_pauses">Allowed Pauses</string>
    <string name="exam_name">Exam Name</string>
    <string name="chapter_name">Chapter Name</string>
    <string name="studymaterial_name">Study Material Title</string>
    <string name="studymaterial_desc">Study Material Description</string>
    <string name="album_name">Album Name</string>
    <string name="album_Desc">Album Description</string>
    <string name="enter_marks">Enter Marks</string>
    <string name="enter_comment">Comments</string>
    <string name="cancel">Cancel</string>
    <string name="assignment_name">Homework Name</string>
    <string name="outoffmark">Out Off Mark</string>
    <string name="attended">Attended</string>
    <string name="group_students">Group Students</string>
    <string name="nav_video_exam">Video Exam</string>
    <string name="leave">Leave</string>
    <string name="track">Track</string>
    <string name="clear_data">Clear Data</string>
</resources>