<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="info.passdaily.st_therese_app.typeofuser.parent.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="info.passdaily.st_therese_app.typeofuser.parent.zoom_layout.LiveScheduledFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_live_scheduled" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="info.passdaily.st_therese_app.typeofuser.parent.online_video.OnlineVideoFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_online_video" />
</navigation>