<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Select Option"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resumeButton"
        style="@style/RoundedCornerButtonGreen400"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/resume"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton"
        style="@style/RoundedCornerButtonOrange400"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/save_amp_exit"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_02"
        app:layout_constraintEnd_toEndOf="@+id/resumeButton"
        app:layout_constraintStart_toStartOf="@+id/resumeButton"
        app:layout_constraintTop_toBottomOf="@+id/resumeButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/finishButton"
        style="@style/RoundedCornerButtonRed300"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/finish"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="@+id/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>