<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <View
        android:id="@+id/view2"
        android:layout_width="100dp"
        android:layout_height="3dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <RelativeLayout
        android:id="@+id/linearLayout8"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/bg_spinner"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/relativeLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="3dp">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerAcademic"
                style="@style/spinner_style2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/accedemicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="-3dp"
            android:background="@color/white"
            android:fontFamily="@font/poppins_light_italic"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:text="@string/select_group"
            android:textColor="@color/dark_gray_700"
            android:textSize="12sp" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_spinner"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout8"
        app:layout_constraintTop_toTopOf="@+id/linearLayout8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="3dp">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerClass"
                style="@style/spinner_style2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/classText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="-3dp"
            android:background="@color/white"
            android:fontFamily="@font/poppins_light_italic"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:text="@string/select_status"
            android:textColor="@color/dark_gray_700"
            android:textSize="12sp" />


    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSubmit"
        style="@style/RoundedCornerButtonGreen400"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/group_students"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout8"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3"
        app:layout_constraintVertical_bias="0.873" />


</androidx.constraintlayout.widget.ConstraintLayout>